fix: tab index style, horizontal scroll

--- a/static/styles.css
+++ b/static/styles.css
@@ -29,35 +29,44 @@ body {
     bottom: 0;
     width: 100vw;
     z-index: 1;
-    padding-bottom: 50px;
+    padding-bottom: 10px;
     margin-top: 0;
     padding-top: 0;
     width: 100vw;
+    /* Hide horizontal scrollbar*/
+    scrollbar-width: none;          /* Firefox */
+    -ms-overflow-style: none;       /* IE and Edge */
+}
+#links::-webkit-scrollbar {
+    /* Hide horizontal scrollbar*/
+    display: none;                  /* Chrome, Safari, Opera */
 }
 
 #links li {
-    list-style-type: none;
     gap: 10%;
-    background: rgba(0,0,0,0.5);
-    padding: 32px 20px;
-    width: 120px;
-    height: 60px;
-    border-radius: 5px;
-    margin: 0 10px;
-    border-radius: 5px;
-    width: 10vw;
+    list-style-type: none;
     scroll-snap-align: center;
-    width: 120px;
-    border-radius: 5px;
     flex: 0 0 120px;
 }
 #links a {
+    padding: 32px 20px;
+    border-radius: 5px;
+    background: rgba(0,0,0,0.75);
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 120px;
+    height: 60px;
     color: #fff;
     text-decoration: none;
     margin: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 #links a:hover {
     background: rgba(0,0,0,0.8);
